[SIS-xxx] upgrading to abstracto version supporting components v2 changing meetup and quote command responses to use components v2 changing column name of quote attachment